--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="25">
         <tr>
-            <td><img src="ali.png.jpg" alt="Ali profile picture "></td>
+            <td><img src="images/ali.png.jpg" alt="Ali profile picture "></td>
             <td><h1>Ali Zaidi</h1>
                 <p><em>Founder and CEO of this page and  <strong><a href="https://www.friv.com/new.html"> friv</a></strong></em></p>
                 <p>i am a fucking GOD and i love bitches</p></td>
